--- a/posts/2014-04-23-uus-algus.md
+++ b/posts/2014-04-23-uus-algus.md
@@ -8,12 +8,11 @@ date: katse nr 2 &mdash; 23. aprill 2014
 rakenduse projekti uuesti ellu äratada ning ka lõpuni viia siis toimunud 
 võrgurakendused kooli tundide raames.
 
-Kuna ma tollel hetkel enda esimest katset enam üles ei leidnud siis otsustasin 
+Kuna ma tollel hetkel enda esimest katset enam üles ei leidnud, otsustasin 
 uuesti nullist alustada.
 
 Algust sai tehtud `vmok_tunniplaan.py` failiga mille eesmärk on Väike-Maarja
-Õppekeskuse kodulehelt üles otsida hetkel üleval olevad tunniplaanid ning need 
-siis alla laadida ja need `.png` piltideks teisendada.
+Õppekeskuse kodulehelt üles otsida hetkel üleval olevad tunniplaanid, need alla laadida ja `.png` piltideks teisendada.
 
 Eesmärk sai jaotatud mitmeks väiksemaks probleemiks, et neid kergem lahendada oleks
 1. HTML koodist tunniplaanide nimekirja välja lugemine
@@ -28,6 +27,14 @@ HTML koodist ennast läbi närida. Lisaks sai ka kasutatud [requests][3] teeki
 mis muudab HTTP käskude saatmise serverile palju palju kergemaks.
 
 <script src="https://gist.github.com/arti95/6fb56a63ad90ae349725.js"></script>
+
+
+...
+
+
+Ja lõpptulemus kõige selle tagajärel oli selline väga lihtne ja kole veebileht.
+
+![esimene veeb](http://i.imgur.com/PdgG9wd.png)
 
 [1]: https://www.python.org/ "Python programeerimiskeele koduleht"
 [2]: http://www.crummy.com/software/BeautifulSoup/ "Beautiful Soup Python teegi koduleht"
