--- a/posts/2014-04-23-uus-algus.md
+++ b/posts/2014-04-23-uus-algus.md
@@ -5,26 +5,26 @@ date: katse nr 2 &mdash; 23. aprill 2014
 ---
 
 2014-nda aasta aprillikuu lõpupoole otsustasin selle mobiilse tunniplaani 
-rakenduse projekti uuesti ellu äratada ning ka lõpuni viia siis toimunud 
-võrgurakendused kooli tundide raames.
+rakenduse projekti uuesti ellu äratada ning ka lõpuni viia, kasutades selleks
+võrgurakenduse eriala tunde.
 
-Kuna ma tollel hetkel enda esimest katset enam üles ei leidnud, otsustasin 
-uuesti nullist alustada.
+Kuna ma tollel hetkel enda esimest katset enam üles ei leidnud, otsustasin
+nullist alustada.
 
-Algust sai tehtud `vmok_tunniplaan.py` failiga mille eesmärk on Väike-Maarja
-Õppekeskuse kodulehelt üles otsida hetkel üleval olevad tunniplaanid, need alla laadida ja `.png` piltideks teisendada.
+Algust sai tehtud `vmok_tunniplaan.py` failiga, mille eesmärk on Väike-Maarja
+Õppekeskuse kodulehelt üles otsida hetkel ülevalolevad tunniplaanid, need alla laadida ja `.png` piltideks teisendada.
 
-Eesmärk sai jaotatud mitmeks väiksemaks probleemiks, et neid kergem lahendada oleks
-1. HTML koodist tunniplaanide nimekirja välja lugemine
-2. Tunniplaani allalaadimine
-3. Flash `.swf` failide lugemine ja nendest `.png` piltide loomine
-4. Piltide salvestamine loogilisse kaustapuuse.
+Töö sai jaotatud mitmeks väiksemaks lahendamistvajavaks probleemiks:
+1. HTML koodist tunniplaanide nimekirja väljalugemine;
+2. tunniplaanide allalaadimine;
+3. Flash `.swf` failide lugemine ja nendest `.png` piltide loomine;
+4. piltide salvestamine loogilisse kaustapuuse.
 
-Esimene probleem on õnneks üsna kergelt lahendatav kuna programmeerimiskeeles
+Esimene probleem on õnneks üsna kergelt lahendatav, kuna programmeerimiskeeles
 [Python][1], mida ma otsustasin kasutada terve selle projekti jaoks,
-on olemas üks teek nimega [Beautiful Soup][2] millega on üsna lihtne 
-HTML koodist ennast läbi närida. Lisaks sai ka kasutatud [requests][3] teeki
-mis muudab HTTP käskude saatmise serverile palju palju kergemaks.
+on olemas üks teek, nimega [Beautiful Soup][2], millega on üsna lihtne 
+HTML koodist ennast läbi närida. Lisaks sai ka kasutatud [requests][3] teeki,
+mis muudab HTTP käskude saatmise serverile palju kergemaks.
 
 <script src="https://gist.github.com/arti95/6fb56a63ad90ae349725.js"></script>
 
@@ -32,7 +32,7 @@ mis muudab HTTP käskude saatmise serverile palju palju kergemaks.
 ...
 
 
-Ja lõpptulemus kõige selle tagajärel oli selline väga lihtne ja kole veebileht.
+Ja lõpptulemus kõige selle tagajärel oli selline &mdash; lihtne ja kole veebileht.
 
 ![esimene veeb](http://i.imgur.com/PdgG9wd.png)
 
